# vv-generic-battery-node

./: .gitmodules  CMakeLists.txt
app/: application.c  sensors.c  sensors.h
