cmake_minimum_required(VERSION 3.9)
project(vv_usb_gateway)

set(CMAKE_CXX_STANDARD 11)


add_library(BigClownSdk STATIC
        sdk/bcl/inc/bc_radio_node.h
        sdk/bcl/inc/bc_radio_pub.h
        sdk/bcl/inc/bc_rtc.h
        sdk/bcl/inc/bc_sc16is740.h
        sdk/bcl/inc/bc_scheduler.h
        sdk/bcl/inc/bc_sht20.h
        sdk/bcl/inc/bc_sht30.h
        sdk/bcl/inc/bc_spi.h
        sdk/bcl/inc/bc_spirit1.h
        sdk/bcl/inc/bc_tag_barometer.h
        sdk/bcl/inc/bc_tag_humidity.h
        sdk/bcl/inc/bc_tag_lux_meter.h
        sdk/bcl/inc/bc_tag_temperature.h
        sdk/bcl/inc/bc_tca9534a.h
        sdk/bcl/inc/bc_td1207r.h
        sdk/bcl/inc/bc_tick.h
        sdk/bcl/inc/bc_tmp112.h
        sdk/bcl/inc/bc_uart.h
        sdk/bcl/inc/bc_usb_cdc.h
        sdk/bcl/inc/bc_ws2812b.h
        sdk/bcl/inc/bc_wssfm10r1at.h
        sdk/bcl/inc/bcl.h
        sdk/bcl/inc/jsmn.h
        sdk/bcl/src/base64.c
        sdk/bcl/src/bc_adc.c
        sdk/bcl/src/bc_analog_sensor.c
        sdk/bcl/src/bc_atsha204.c
        sdk/bcl/src/bc_button.c
        sdk/bcl/src/bc_cp201t.c
        sdk/bcl/src/bc_dac.c
        sdk/bcl/src/bc_data_stream.c
        sdk/_examples/button/application.c
        sdk/_examples/button/application.h
        sdk/_examples/infrared-receiver/application.c
        sdk/_examples/infrared-receiver/application.h
        sdk/_examples/infrared-receiver/usb_talk.c
        sdk/_examples/infrared-receiver/usb_talk.h
        sdk/_examples/lcd-text/application.c
        sdk/_examples/lcd-text/application.h
        sdk/_examples/led-on-off/application.c
        sdk/_examples/led-on-off/application.h
        sdk/_examples/led-strip/application.c
        sdk/_examples/led-strip/application.h
        sdk/_examples/lux-meter-tag/application.c
        sdk/_examples/lux-meter-tag/application.h
        sdk/_examples/module_climate/application.c
        sdk/_examples/module_climate/application.h
        sdk/_examples/onewire-i2c/application.c
        sdk/_examples/onewire-i2c/application.h
        sdk/_examples/onewire-relay/application.c
        sdk/_examples/onewire-relay/application.h
        sdk/_examples/onewire-search/application.c
        sdk/_examples/onewire-search/application.h
        sdk/_examples/pir/application.c
        sdk/_examples/pir/application.h
        sdk/_examples/radio-base/application.c
        sdk/_examples/radio-base/application.h
        sdk/_examples/radio-remote/application.c
        sdk/_examples/radio-remote/application.h
        sdk/_examples/scheduler-advanced/application.c
        sdk/_examples/scheduler-advanced/application.h
        sdk/_examples/scheduler-basics/application.c
        sdk/_examples/scheduler-basics/application.h
        sdk/_examples/sigfox/application.c
        sdk/_examples/sigfox/application.h
        sdk/_examples/ultrasound/application.c
        sdk/_examples/ultrasound/application.h
        sdk/_examples/usb-sensors/application.c
        sdk/_examples/usb-sensors/application.h
        sdk/_examples/usb-sensors/usb_talk.c
        sdk/_examples/usb-sensors/usb_talk.h
        sdk/bcl/inc/base64.h
        sdk/bcl/inc/bc_adc.h
        sdk/bcl/inc/bc_analog_sensor.h
        sdk/bcl/inc/bc_atsha204.h
        sdk/bcl/inc/bc_button.h
        sdk/bcl/inc/bc_common.h
        sdk/bcl/inc/bc_cp201t.h
        sdk/bcl/inc/bc_dac.h
        sdk/bcl/inc/bc_data_stream.h
        sdk/bcl/inc/bc_device_id.h
        sdk/bcl/inc/bc_dfu.h
        sdk/bcl/inc/bc_ds28e17.h
        sdk/bcl/inc/bc_eeprom.h
        sdk/bcl/inc/bc_exti.h
        sdk/bcl/inc/bc_fifo.h
        sdk/bcl/inc/bc_flood_detector.h
        sdk/bcl/inc/bc_font_common.h
        sdk/bcl/inc/bc_gpio.h
        sdk/bcl/inc/bc_hc_sr04.h
        sdk/bcl/inc/bc_hdc2080.h
        sdk/bcl/inc/bc_hts221.h
        sdk/bcl/inc/bc_i2c.h
        sdk/bcl/inc/bc_image.h
        sdk/bcl/inc/bc_ir_rx.h
        sdk/bcl/inc/bc_irq.h
        sdk/bcl/inc/bc_led.h
        sdk/bcl/inc/bc_led_strip.h
        sdk/bcl/inc/bc_lis2dh12.h
        sdk/bcl/inc/bc_log.h
        sdk/bcl/inc/bc_lp8.h
        sdk/bcl/inc/bc_module_battery.h
        sdk/bcl/inc/bc_module_climate.h
        sdk/bcl/inc/bc_module_co2.h
        sdk/bcl/inc/bc_module_encoder.h
        sdk/bcl/inc/bc_module_lcd.h
        sdk/bcl/inc/bc_module_pir.h
        sdk/bcl/inc/bc_module_power.h
        sdk/bcl/inc/bc_module_relay.h
        sdk/bcl/inc/bc_module_sensor.h
        sdk/bcl/inc/bc_module_sigfox.h
        sdk/bcl/inc/bc_mpl3115a2.h
        sdk/bcl/inc/bc_onewire.h
        sdk/bcl/inc/bc_onewire_relay.h
        sdk/bcl/inc/bc_opt3001.h
        sdk/bcl/inc/bc_pulse_counter.h
        sdk/bcl/inc/bc_pyq1648.h
        sdk/bcl/inc/bc_queue.h
        sdk/bcl/inc/bc_radio.h
        sdk/bcl/src/bc_device_id.c
        sdk/bcl/src/bc_dfu.c
        sdk/bcl/src/bc_ds28e17.c
        sdk/bcl/src/bc_eeprom.c
        sdk/bcl/src/bc_exti.c
        sdk/bcl/src/bc_fifo.c
        sdk/bcl/src/bc_flood_detector.c
        sdk/bcl/src/bc_font_ubuntu_11.c
        sdk/bcl/src/bc_font_ubuntu_13.c
        sdk/bcl/src/bc_font_ubuntu_15.c
        sdk/bcl/src/bc_font_ubuntu_24.c
        sdk/bcl/src/bc_font_ubuntu_28.c
        sdk/bcl/src/bc_font_ubuntu_33.c
        sdk/bcl/src/bc_gpio.c
        sdk/bcl/src/bc_hc_sr04.c
        sdk/bcl/src/bc_hdc2080.c
        sdk/bcl/src/bc_hts221.c
        sdk/bcl/src/bc_i2c.c
        sdk/bcl/src/bc_ir_rx.c
        sdk/bcl/src/bc_irq.c
        sdk/bcl/src/bc_led.c
        sdk/bcl/src/bc_led_strip.c
        sdk/bcl/src/bc_lis2dh12.c
        sdk/bcl/src/bc_log.c
        sdk/bcl/src/bc_lp8.c
        sdk/bcl/src/bc_module_battery.c
        sdk/bcl/src/bc_module_climate.c
        sdk/bcl/src/bc_module_co2.c
        sdk/bcl/src/bc_module_encoder.c
        sdk/bcl/src/bc_module_lcd.c
        sdk/bcl/src/bc_module_pir.c
        sdk/bcl/src/bc_module_power.c
        sdk/bcl/src/bc_module_relay.c
        sdk/bcl/src/bc_module_sensor.c
        sdk/bcl/src/bc_module_sigfox.c
        sdk/bcl/src/bc_mpl3115a2.c
        sdk/bcl/src/bc_onewire.c
        sdk/bcl/src/bc_onewire_relay.c
        sdk/bcl/src/bc_opt3001.c
        sdk/bcl/src/bc_pulse_counter.c
        sdk/bcl/src/bc_pyq1648.c
        sdk/bcl/src/bc_queue.c
        sdk/bcl/src/bc_radio.c
        sdk/bcl/src/bc_radio_node.c
        sdk/bcl/src/bc_radio_pub.c
        sdk/bcl/src/bc_rtc.c
        sdk/bcl/src/bc_sc16is740.c
        sdk/bcl/src/bc_scheduler.c
        sdk/bcl/src/bc_sht20.c
        sdk/bcl/src/bc_sht30.c
        sdk/bcl/src/bc_spi.c
        sdk/bcl/src/bc_spirit1.c
        sdk/bcl/src/bc_tag_barometer.c
        sdk/bcl/src/bc_tag_humidity.c
        sdk/bcl/src/bc_tag_lux_meter.c
        sdk/bcl/src/bc_tag_temperature.c
        sdk/bcl/src/bc_tca9534a.c
        sdk/bcl/src/bc_td1207r.c
        sdk/bcl/src/bc_tick.c
        sdk/bcl/src/bc_tmp112.c
        sdk/bcl/src/bc_uart.c
        sdk/bcl/src/bc_usb_cdc.c
        sdk/bcl/src/bc_ws2812b.c
        sdk/bcl/src/bc_wssfm10r1at.c
        sdk/bcl/src/jsmn.c
        sdk/bcl/stm/inc/main.h
        sdk/bcl/stm/inc/stm32l0xx_hal_conf.h
        sdk/bcl/stm/inc/stm32l0xx_it.h
        sdk/bcl/stm/inc/usbd_cdc_if.h
        sdk/bcl/stm/inc/usbd_conf.h
        sdk/bcl/stm/inc/usbd_desc.h
        sdk/bcl/stm/src/main.c
        sdk/bcl/stm/src/stm32l0xx_it.c
        sdk/bcl/stm/src/usbd_cdc_if.c
        sdk/bcl/stm/src/usbd_conf.c
        sdk/bcl/stm/src/usbd_desc.c
        sdk/stm/hal/inc/legacy/stm32_hal_legacy.h
        sdk/stm/hal/inc/stm32l0xx_hal.h
        sdk/stm/hal/inc/stm32l0xx_hal_adc.h
        sdk/stm/hal/inc/stm32l0xx_hal_adc_ex.h
        sdk/stm/hal/inc/stm32l0xx_hal_comp.h
        sdk/stm/hal/inc/stm32l0xx_hal_comp_ex.h
        sdk/stm/hal/inc/stm32l0xx_hal_cortex.h
        sdk/stm/hal/inc/stm32l0xx_hal_crc.h
        sdk/stm/hal/inc/stm32l0xx_hal_crc_ex.h
        sdk/stm/hal/inc/stm32l0xx_hal_cryp.h
        sdk/stm/hal/inc/stm32l0xx_hal_cryp_ex.h
        sdk/stm/hal/inc/stm32l0xx_hal_dac.h
        sdk/stm/hal/inc/stm32l0xx_hal_dac_ex.h
        sdk/stm/hal/inc/stm32l0xx_hal_def.h
        sdk/stm/hal/inc/stm32l0xx_hal_dma.h
        sdk/stm/hal/inc/stm32l0xx_hal_firewall.h
        sdk/stm/hal/inc/stm32l0xx_hal_flash.h
        sdk/stm/hal/inc/stm32l0xx_hal_flash_ex.h
        sdk/stm/hal/inc/stm32l0xx_hal_flash_ramfunc.h
        sdk/stm/hal/inc/stm32l0xx_hal_gpio.h
        sdk/stm/hal/inc/stm32l0xx_hal_gpio_ex.h
        sdk/stm/hal/inc/stm32l0xx_hal_i2c.h
        sdk/stm/hal/inc/stm32l0xx_hal_i2c_ex.h
        sdk/stm/hal/inc/stm32l0xx_hal_i2s.h
        sdk/stm/hal/inc/stm32l0xx_hal_irda.h
        sdk/stm/hal/inc/stm32l0xx_hal_irda_ex.h
        sdk/stm/hal/inc/stm32l0xx_hal_iwdg.h
        sdk/stm/hal/inc/stm32l0xx_hal_lcd.h
        sdk/stm/hal/inc/stm32l0xx_hal_lptim.h
        sdk/stm/hal/inc/stm32l0xx_hal_lptim_ex.h
        sdk/stm/hal/inc/stm32l0xx_hal_pcd.h
        sdk/stm/hal/inc/stm32l0xx_hal_pcd_ex.h
        sdk/stm/hal/inc/stm32l0xx_hal_pwr.h
        sdk/stm/hal/inc/stm32l0xx_hal_pwr_ex.h
        sdk/stm/hal/inc/stm32l0xx_hal_rcc.h
        sdk/stm/hal/inc/stm32l0xx_hal_rcc_ex.h
        sdk/stm/hal/inc/stm32l0xx_hal_rng.h
        sdk/stm/hal/inc/stm32l0xx_hal_rtc.h
        sdk/stm/hal/inc/stm32l0xx_hal_rtc_ex.h
        sdk/stm/hal/inc/stm32l0xx_hal_smartcard.h
        sdk/stm/hal/inc/stm32l0xx_hal_smartcard_ex.h
        sdk/stm/hal/inc/stm32l0xx_hal_smbus.h
        sdk/stm/hal/inc/stm32l0xx_hal_spi.h
        sdk/stm/hal/inc/stm32l0xx_hal_tim.h
        sdk/stm/hal/inc/stm32l0xx_hal_tim_ex.h
        sdk/stm/hal/inc/stm32l0xx_hal_tsc.h
        sdk/stm/hal/inc/stm32l0xx_hal_uart.h
        sdk/stm/hal/inc/stm32l0xx_hal_uart_ex.h
        sdk/stm/hal/inc/stm32l0xx_hal_usart.h
        sdk/stm/hal/inc/stm32l0xx_hal_usart_ex.h
        sdk/stm/hal/inc/stm32l0xx_hal_wwdg.h
        sdk/stm/hal/src/stm32l0xx_hal.c
        sdk/stm/hal/src/stm32l0xx_hal_adc.c
        sdk/stm/hal/src/stm32l0xx_hal_adc_ex.c
        sdk/stm/hal/src/stm32l0xx_hal_comp.c
        sdk/stm/hal/src/stm32l0xx_hal_comp_ex.c
        sdk/stm/hal/src/stm32l0xx_hal_cortex.c
        sdk/stm/hal/src/stm32l0xx_hal_crc.c
        sdk/stm/hal/src/stm32l0xx_hal_crc_ex.c
        sdk/stm/hal/src/stm32l0xx_hal_cryp.c
        sdk/stm/hal/src/stm32l0xx_hal_cryp_ex.c
        sdk/stm/hal/src/stm32l0xx_hal_dac.c
        sdk/stm/hal/src/stm32l0xx_hal_dac_ex.c
        sdk/stm/hal/src/stm32l0xx_hal_dma.c
        sdk/stm/hal/src/stm32l0xx_hal_firewall.c
        sdk/stm/hal/src/stm32l0xx_hal_flash.c
        sdk/stm/hal/src/stm32l0xx_hal_flash_ex.c
        sdk/stm/hal/src/stm32l0xx_hal_flash_ramfunc.c
        sdk/stm/hal/src/stm32l0xx_hal_gpio.c
        sdk/stm/hal/src/stm32l0xx_hal_i2c.c
        sdk/stm/hal/src/stm32l0xx_hal_i2c_ex.c
        sdk/stm/hal/src/stm32l0xx_hal_i2s.c
        sdk/stm/hal/src/stm32l0xx_hal_irda.c
        sdk/stm/hal/src/stm32l0xx_hal_iwdg.c
        sdk/stm/hal/src/stm32l0xx_hal_lcd.c
        sdk/stm/hal/src/stm32l0xx_hal_lptim.c
        sdk/stm/hal/src/stm32l0xx_hal_pcd.c
        sdk/stm/hal/src/stm32l0xx_hal_pcd_ex.c
        sdk/stm/hal/src/stm32l0xx_hal_pwr.c
        sdk/stm/hal/src/stm32l0xx_hal_pwr_ex.c
        sdk/stm/hal/src/stm32l0xx_hal_rcc.c
        sdk/stm/hal/src/stm32l0xx_hal_rcc_ex.c
        sdk/stm/hal/src/stm32l0xx_hal_rng.c
        sdk/stm/hal/src/stm32l0xx_hal_rtc.c
        sdk/stm/hal/src/stm32l0xx_hal_rtc_ex.c
        sdk/stm/hal/src/stm32l0xx_hal_smartcard.c
        sdk/stm/hal/src/stm32l0xx_hal_smartcard_ex.c
        sdk/stm/hal/src/stm32l0xx_hal_smbus.c
        sdk/stm/hal/src/stm32l0xx_hal_spi.c
        sdk/stm/hal/src/stm32l0xx_hal_tim.c
        sdk/stm/hal/src/stm32l0xx_hal_tim_ex.c
        sdk/stm/hal/src/stm32l0xx_hal_tsc.c
        sdk/stm/hal/src/stm32l0xx_hal_uart.c
        sdk/stm/hal/src/stm32l0xx_hal_uart_ex.c
        sdk/stm/hal/src/stm32l0xx_hal_usart.c
        sdk/stm/hal/src/stm32l0xx_hal_wwdg.c
        sdk/stm/spirit1/inc/MCU_Interface.h
        sdk/stm/spirit1/inc/SDK_Configuration_Common.h
        sdk/stm/spirit1/inc/SPIRIT_Aes.h
        sdk/stm/spirit1/inc/SPIRIT_Calibration.h
        sdk/stm/spirit1/inc/SPIRIT_Commands.h
        sdk/stm/spirit1/inc/SPIRIT_Config.h
        sdk/stm/spirit1/inc/SPIRIT_Csma.h
        sdk/stm/spirit1/inc/SPIRIT_DirectRF.h
        sdk/stm/spirit1/inc/SPIRIT_General.h
        sdk/stm/spirit1/inc/SPIRIT_Gpio.h
        sdk/stm/spirit1/inc/SPIRIT_Irq.h
        sdk/stm/spirit1/inc/SPIRIT_LinearFifo.h
        sdk/stm/spirit1/inc/SPIRIT_Management.h
        sdk/stm/spirit1/inc/SPIRIT_PktBasic.h
        sdk/stm/spirit1/inc/SPIRIT_PktCommon.h
        sdk/stm/spirit1/inc/SPIRIT_PktMbus.h
        sdk/stm/spirit1/inc/SPIRIT_PktStack.h
        sdk/stm/spirit1/inc/SPIRIT_Qi.h
        sdk/stm/spirit1/inc/SPIRIT_Radio.h
        sdk/stm/spirit1/inc/SPIRIT_Regs.h
        sdk/stm/spirit1/inc/SPIRIT_Timer.h
        sdk/stm/spirit1/inc/SPIRIT_Types.h
        sdk/stm/spirit1/src/SPIRIT_Aes.c
        sdk/stm/spirit1/src/SPIRIT_Calibration.c
        sdk/stm/spirit1/src/SPIRIT_Commands.c
        sdk/stm/spirit1/src/SPIRIT_Csma.c
        sdk/stm/spirit1/src/SPIRIT_DirectRF.c
        sdk/stm/spirit1/src/SPIRIT_General.c
        sdk/stm/spirit1/src/SPIRIT_Gpio.c
        sdk/stm/spirit1/src/SPIRIT_Irq.c
        sdk/stm/spirit1/src/SPIRIT_LinearFifo.c
        sdk/stm/spirit1/src/SPIRIT_Management.c
        sdk/stm/spirit1/src/SPIRIT_PktBasic.c
        sdk/stm/spirit1/src/SPIRIT_PktCommon.c
        sdk/stm/spirit1/src/SPIRIT_PktMbus.c
        sdk/stm/spirit1/src/SPIRIT_PktStack.c
        sdk/stm/spirit1/src/SPIRIT_Qi.c
        sdk/stm/spirit1/src/SPIRIT_Radio.c
        sdk/stm/spirit1/src/SPIRIT_Timer.c
        sdk/stm/spirit1/src/SPIRIT_Types.c
        sdk/stm/usb/inc/usbd_cdc.h
        sdk/stm/usb/inc/usbd_core.h
        sdk/stm/usb/inc/usbd_ctlreq.h
        sdk/stm/usb/inc/usbd_def.h
        sdk/stm/usb/inc/usbd_ioreq.h
        sdk/stm/usb/src/usbd_cdc.c
        sdk/stm/usb/src/usbd_core.c
        sdk/stm/usb/src/usbd_ctlreq.c
        sdk/stm/usb/src/usbd_ioreq.c
        sdk/sys/inc/cmsis_gcc.h
        sdk/sys/inc/core_cm0plus.h
        sdk/sys/inc/core_cmFunc.h
        sdk/sys/inc/core_cmInstr.h
        sdk/sys/inc/stm32l083xx.h
        sdk/sys/inc/stm32l0xx.h
        sdk/sys/inc/system_stm32l0xx.h
        sdk/sys/src/system_stm32l0xx.c
        )

add_executable(vv_usb_gateway
        app/application.c
        app/sensors.c
        app/sensors.h
        )

include_directories(
        sdk/bcl/stm/inc/
        sdk/bcl/inc/
)
